it5: User component

--- a/package.json
+++ b/package.json
@@ -21,7 +21,18 @@
     "extends": [
       "react-app",
       "react-app/jest"
-    ]
+    ],
+
+    "rules": {
+      "import/no-anonymous-default-export": 
+        [
+          "error", 
+          {
+            "allowArrowFunction": true
+          }
+        ]
+    }
+
   },
   "browserslist": {
     "production": [
