--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "@testing-library/react": "^14.0.0",
     "@testing-library/user-event": "^14.4.3",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "vitest": "^0.30.1"
   },
   "scripts": {
     "dev": "vite",
@@ -27,8 +28,7 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.3.4",
     "jsdom": "^21.1.1",
-    "vite": "^4.3.0",
-    "vitest": "^0.30.1"
+    "vite": "^4.3.0"
   },
   "browserslist": {
     "production": [
